--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#E0F4F0">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         card_view:cardCornerRadius="60dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintStart_toStartOf="parent"
@@ -24,16 +23,19 @@
             android:id="@+id/contact_pfp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            card_view:srcCompat="@drawable/profpp" />
+            android:background="@color/background_variant"
+            android:padding="12dp"
+            android:scaleType="fitCenter"
+            card_view:srcCompat="@drawable/profile_picture" />
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/contact_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="12dp"
         android:text="Abcd Efgh"
-        android:textColor="#000000"
+        android:textColor="@color/background_complement"
         android:textSize="20sp"
         android:textStyle="bold"
         card_view:layout_constraintBottom_toTopOf="@+id/contact_number"
@@ -45,10 +47,10 @@
         android:id="@+id/contact_number"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="12dp"
         android:text="9876543210"
-        android:textColor="#202020"
-        android:textSize="16sp"
+        android:textColor="@color/background_complement_variant"
+        android:textSize="18sp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toEndOf="@+id/card_view"
@@ -63,4 +65,5 @@
         card_view:layout_constraintEnd_toEndOf="parent"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
