--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="blue_700">#02299F</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary_blue">#FF0057DE</color>
+    <color name="background">#FFFFFFFF</color>
+    <color name="background_variant">#FFE6E6E6</color>
+    <color name="background_complement">#FF000000</color>
+    <color name="background_complement_variant">#A0000000</color>
 </resources>
