--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,9 +4,9 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_blue</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:statusBarColor">@color/primary_blue</item>
         <!-- Navigation bar color. -->
-        <item name="android:navigationBarColor">@color/background_variant</item>
+        <item name="android:navigationBarColor">@color/background</item>
     </style>
 
     <style name="Theme.Contacts.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
