--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="status_color">@color/background_variant</color>
     <color name="primary_blue">#FF0086FF</color>
     <color name="background">#FF000000</color>
     <color name="background_variant">#FF2B2B2B</color>
