--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,8 +4,8 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_blue</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
+        <item name="android:statusBarColor">@color/background_variant</item>
         <!-- Navigation bar color. -->
-        <item name="android:navigationBarColor">@color/background_variant</item>
+        <item name="android:navigationBarColor">@color/background</item>
     </style>
 </resources>
