modified contact_item.xml looks

--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -34,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:text="Abcd Efgh"
         android:textColor="@color/background_complement"
         android:textSize="20sp"
@@ -48,6 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:text="9876543210"
         android:textColor="@color/background_complement_variant"
         android:textSize="18sp"
